# lemon-ledger

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  justfile  package.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 68caf432197e_baseline.py
apps/api/docs/decisions/: ADR-0002-wlemx-lemx-canonical-membership.md
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20260605_2212_294f76baacc3_name_initial_schema.py  20260607_1323_351ece0cc2cf_name_raw_ingestion_tables.py  20260617_1329_0edc18d4c0a5_name_seed_lemonchain_tier1.py  20260623_0000_a1b2c3d4e5f6_historical_prices.py  20260623_0001_b2c3d4e5f6a1_classified_transactions_l2_decoder_config.py  20260623_0002_c3d4e5f6a1b2_seed_cross_chain_l2_config.py  20260624_0001_d4e5f6a1b2c3_extend_classification_check.py  20260624_0002_e5f6a1b2c3d4_deflationary_burn_addresses.py  20260624_0003_f6a1b2c3d4e5_seed_lemonchain_only_l2config.py  20260624_0004_a2b3c4d5e6f7_logical_assets_membership.py  20260624_0005_b3c4d5e6f7a2_lot_tables.py  20260624_0006_c4d5e6f7a2b3_entities_basis_method_lot_gate.py  20260624_0007_d5e6f7a2b3c4_bridge_tables.py  20260624_0008_e6f7a2b3c4d5_classified_entities_bridge.py  20260624_0009_f7a2b3c4d5e6_classification_check_vlot_gate.py  20260625_0010_a8b9c0d1e2f3_pending_cls_disposal_adj_ct_signal.py  20260625_1321_c0d1e2f3a4b5_classification_audit_log.py  20260625_1800_d1e2f3a4b5c6_lot_relocation_reason_internal_reassignment.py  20260625_1900_e2f3a4b5c6d7_vlotgate_bridge_wallet_key.py
apps/api/src/lemon_ledger/: __init__.py  cli.py  config.py  main.py  worker.py
apps/api/src/lemon_ledger/api/: app.py  health.py
apps/api/src/lemon_ledger/classify/: __init__.py  context.py  orchestrator.py  recognizers.py  tasks.py  types.py
apps/api/src/lemon_ledger/classify/decoders/: __init__.py  base.py  cross_chain.py  lemonchain_only.py
apps/api/src/lemon_ledger/cli/: __init__.py
apps/api/src/lemon_ledger/clients/: __init__.py  base.py  blockscout.py  coingecko.py  coinmarketcap.py  envelope.py  exceptions.py  oracle.py  rate_limit.py  registry.py
apps/api/src/lemon_ledger/core/: config.py  logging.py
apps/api/src/lemon_ledger/db/: base.py  engine.py  session.py  sync_session.py
apps/api/src/lemon_ledger/domain/: chains.py
apps/api/src/lemon_ledger/ingestion/: mappers.py  sync.py
apps/api/src/lemon_ledger/jobs/: __init__.py  supply_snapshot.py
apps/api/src/lemon_ledger/models/: __init__.py  _constraints.py  bridge.py  burn_address.py  classification_audit.py  classified.py  entity.py  enums.py  historical_price.py  logical_asset.py  lot.py  pending_classification.py  raw.py  token_registry.py  user.py  user_token_classification.py  wallet.py  wallet_entity_assignment.py
apps/api/src/lemon_ledger/pricing/: cache.py  external_ids.py  historical_backfill.py  repository.py  service.py  sources.py  tasks.py  types.py  units.py
apps/api/src/lemon_ledger/tasks/: __init__.py  sync.py
apps/api/src/lemon_ledger/workers/: celery_app.py
apps/api/tests/: conftest.py  test_1_9_schema.py  test_cli.py  test_health.py  test_integration.py  test_rate_limit.py  test_raw_migration.py  test_schema_roundtrip.py  test_token_registry_seed.py
apps/api/tests/bridge/: test_candidates.py  test_confidence.py  test_custody.py  test_engine_bridge.py  test_gate_wallet_key.py  test_pairing.py  test_pipeline_e2e.py  test_workflow.py
apps/api/tests/classify/: conftest.py  helpers.py  test_burn_deflationary.py  test_context.py  test_db_roundtrip.py  test_decoder_registration.py  test_lemonchain_only.py  test_mint_stake_detectors.py  test_orchestrator.py  test_recognizers.py  test_reward_detector.py  test_run_classify.py  test_supply_snapshot.py
apps/api/tests/clients/: test_blockscout.py  test_coingecko.py  test_coinmarketcap.py  test_envelope.py  test_registry.py
apps/api/tests/cross_entity/: test_detection.py  test_resolve.py
apps/api/tests/forms/: conftest.py  test_activity_report.py  test_form_8949.py  test_gate.py  test_generate_e2e.py  test_read_model.py  test_reconcile.py  test_render.py  test_schedule_1.py  test_schedule_d.py
apps/api/tests/ingestion/: test_mappers.py  test_sync.py
apps/api/tests/integration/: test_db_connectivity.py
apps/api/tests/lots/: test_engine_integration.py  test_engine_transfer_resolution.py  test_methods.py
apps/api/tests/pricing/: conftest.py  test_backfill.py  test_cache.py  test_service.py  test_sources.py
apps/api/tests/tasks/: test_sync_task.py
apps/api/tests/unit/: test_celery_app.py  test_cli.py  test_config.py  test_health.py  test_logging.py
(+43 files in other folders)
