[project]
name = "lemon-ledger-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "celery[redis]>=5.4",
    "psycopg[binary]>=3.1",
    "typer>=0.12",
    "structlog>=24.1",
    "uuid-utils>=0.16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "testcontainers>=4.7",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "sqlalchemy[mypy]>=2.0.30",
    "bandit>=1.7",
]

[project.scripts]
lemon-ledger = "lemon_ledger.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemon_ledger"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "asyncpg.*", "celery.*", "celery.utils.log.*", "kombu.*"]
ignore_missing_imports = true

[tool.bandit]
targets = ["src/lemon_ledger"]
exclude_dirs = ["tests", "migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src/lemon_ledger --cov-report=term-missing --cov-fail-under=80 --cov-config=pyproject.toml"

[tool.coverage.run]
source_pkgs = ["lemon_ledger"]
omit = ["*/migrations/*"]

[tool.coverage.report]
omit = ["*/migrations/*"]
