[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemon-ledger"
version = "0.1.0"
description = "Read-only cryptocurrency tax and portfolio tracker for the LEMX ecosystem."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "celery>=5.4",
    "redis>=5.0",
    "typer>=0.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
]

[project.scripts]
lemon-ledger = "lemon_ledger.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lemon_ledger"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
    "isort>=5.13",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "testcontainers[postgresql]>=4.0",
]

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
"alembic/versions/*.py" = ["F401", "UP"]

[tool.mypy]
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "uvicorn.*", "kombu.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=lemon_ledger --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["lemon_ledger"]
branch = true
